src/objects/Case_Contributor__c.object
<CustomObject><fields>
        <fullName>Case_Contributor_ID__c</fullName>
        <formula>Contributor_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Contributor ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_ID__c</fullName>
        <inlineHelpText>Link of associated Case record</inlineHelpText>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Contributors</relationshipLabel>
        <relationshipName>Case_Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Contributor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Contributors</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contributor__c</fullName>
        <formula>Contributor_Name__r.FirstName &amp; " " &amp; Contributor_Name__r.LastName</formula>
        <label>Contributor</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Inactive__c</fullName>
        <formula>IF( Contributor_Name__r.IsActive &lt;&gt; TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Office__c</fullName>
        <formula>TEXT(Contributor_Name__r.RH_Lev_6_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Contributors</relationshipLabel>
        <relationshipName>Case_Contributors</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Original_Office__c</fullName>
        <formula>RH_Lev_6_Office__c</formula>
        <label>Original Office</label>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_1_GM_All__c</fullName>
        <label>User Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_2_DAS__c</fullName>
        <label>User DAS</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_3_Region_2__c</fullName>
        <label>User Region</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_4_Region_1__c</fullName>
        <label>User Sub-region</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_5_Country__c</fullName>
        <label>User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_6_Office__c</fullName>
        <label>User Office</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RH_Lev_7_Individual__c</fullName>
        <label>User Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Running_User_is_Case_Contributor__c</fullName>
        <formula>Case_Contributor_ID__c = $User.Id</formula>
        <label>Running User is Case Contributor</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Case contributors</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Case Contributor</label><nameField>
        <displayFormat>CCR-{0000}</displayFormat>
        <label>Case Contributor Record</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Case Contributors</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Contributor_ID__c</columns>
        <columns>Case_ID__c</columns>
        <columns>Contributor__c</columns>
        <columns>Contributor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Required_Case_Contributor_Name</fullName>
        <active>true</active>
        <description>Case Contributor Name is Required.  Added to prevent Process Builder flow error when user saves record without populating Contributor Name field.</description>
        <errorConditionFormula>Contributor_Name__c = ""</errorConditionFormula>
        <errorMessage>Contributor Name is Required.</errorMessage>
    </validationRules></CustomObject>